# python-project-49

./: README.md
hexlet-code/: pyproject.toml
hexlet-code/brain_games/scripts/: brain_games.py
