[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[tool.hatch.env]
scripts = { brain_games = "brain_games.scripts.brain_games:main" }

[project]
name = "brain-games"
version = "0.1.0"
description = "A simple brain games package"
requires-python = ">=3.8"

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
